syntax = "proto3";

package d2.events.v1;

option csharp_namespace = "D2.Events.Protos.V1";

// Event published when a verification email needs to be sent.
message SendVerificationEmailEvent {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string verification_url = 4;
  string token = 5;
}

// Event published when a password reset email needs to be sent.
message SendPasswordResetEvent {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string reset_url = 4;
  string token = 5;
}

// Event published when an organization invitation email needs to be sent.
message SendInvitationEmailEvent {
  string invitation_id = 1;
  string invitee_email = 2;
  string organization_id = 3;
  string organization_name = 4;
  string role = 5;
  string inviter_name = 6;
  string inviter_email = 7;
  string invitation_url = 8;
}
